--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@google/genai": "^1.34.0",
+    "@googlemaps/js-api-loader": "^2.0.2",
     "@googlemaps/three": "^4.0.13",
     "@hookform/resolvers": "^5.2.2",
     "@react-google-maps/api": "^2.20.8",
