--- a/package.json
+++ b/package.json
@@ -17,10 +17,6 @@
     "test:integration": "vitest run __tests__/integration"
   },
   "dependencies": {
-    "concurrently": "^9.1.0",
-    "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
     "@dnd-kit/core": "^6.3.1",
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
@@ -32,8 +28,14 @@
     "@supabase/supabase-js": "^2.89.0",
     "@types/leaflet": "^1.9.21",
     "@types/three": "^0.182.0",
+    "concurrently": "^9.1.0",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
+    "express": "^4.21.2",
     "framer-motion": "^12.24.7",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
     "pdfjs-dist": "^5.4.530",
