feat: Add document processing pipeline with OCR and classification
- Switch SDK from @google/genai to @google/generative-ai
- Add multer for file uploads and pdf-parse for PDF text extraction
- Implement /api/process-document endpoint with:
  - Document type classification (flights, hotels, car rentals, etc.)
  - Field extraction based on document type
  - Date/time format validation
  - IATA code validation for flights
- Improve /api/gemini proxy with better content handling
- Add frontend components: DocumentUploader, DocumentProcessing page
- Add useDocumentAnalysis hook and travelSchemas validator

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@dnd-kit/sortable": "^10.0.0",
     "@dnd-kit/utilities": "^3.2.2",
     "@google/genai": "^1.34.0",
+    "@google/generative-ai": "^0.24.1",
     "@googlemaps/js-api-loader": "^2.0.2",
     "@googlemaps/three": "^4.0.13",
     "@hookform/resolvers": "^5.2.2",
@@ -39,6 +40,8 @@
     "jspdf": "^4.0.0",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.562.0",
+    "multer": "^2.0.2",
+    "pdf-parse": "^2.4.5",
     "pdfjs-dist": "^5.4.530",
     "pica": "^9.0.1",
     "react": "^19.2.3",
